src/angular-app/languageforge/rapid-words/src/client/app/sem-dom-search/sem-dom-search.component.css
/*
Using .sem-dom-picker instead of relying on Angular 2's CSS encapsulation
because at time of writing all files were loaded into the page, effectively
circumventing Angular's encapsulation.
*/

.sem-dom-picker {
    position: relative;
}

.sem-dom-picker input[type='text'] {
    width: 100%;
}

.sem-dom-picker input[type='text']:not(:focus) {
    font-weight: bold;
    font-size: 1.1em;
}

.sem-dom-menu {
    /* Hide the semdom menu by default */
    display: none;
    position: absolute;
    z-index: 1;
    overflow: hidden;

    border-radius: 0.5em;
    width: 100%;

    background-color: white;
    border: 1px solid gray;
    color: #373a3c;
}

.sem-dom-picker ul {
    padding-left: 0;

    max-height: 400pt;
    overflow-y: auto;
    margin-bottom: 0;
}

/* Show the semdom menu when the input is focused, or the menu is hovered */
.sem-dom-picker .sem-dom-menu:hover, .sem-dom-picker input:focus + .sem-dom-menu {
    display: block;
}

.sem-dom-picker li:hover {
    background-color: #104060;
    color: white;
}

.sem-dom-picker li {
    padding: 0.5em;
    cursor: pointer;
    margin: 0;
}

.sem-dom-picker em {
    display: inline-block;
    padding: 0.5em;
}

